--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,13 @@
     <string name="app_name">Talker</string>
 
     <string name="log_in">Zaloguj</string>
-    <string name="new_message_placeholder">Wprowadź nową wiadomość...</string>
+    <string name="register_button">Zarejestruj się.</string>
+    <string name="register_info">Nie masz konta?</string>
+    <string name="login_placeholder">Login</string>
+    <string name="password_placeholder">Hasło</string>
+    <string name="incorrectLogin">Niepoprawny login lub hasło</string>
+    <string name="new_message_placeholder">Wprowadź nową wiadomość</string>
+    <string name="contacts_title">Kontakty</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
