--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,11 @@
 
     <string name="log_in">Zaloguj</string>
     <string name="register_button">Zarejestruj się.</string>
+    <string name="register_title">Rejestracja</string>
+    <string name="register_username">Nazwa użytkownika:</string>
+    <string name="register_email">E-mail:</string>
+    <string name="register_password">Hasło:</string>
+    <string name="register_password2">Powtórz hasło:</string>
     <string name="register_info">Nie masz konta?</string>
     <string name="login_placeholder">Login</string>
     <string name="password_placeholder">Hasło</string>
