Rejestracja i logowanie działa. TODO: błędy logowania, lista użytkoników, zmiana profilu, dodawanie do znajomych, wysyłanie wiadomości, tworzenie pokoi

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Talker</string>
 
     <string name="incorrect_login">Niepoprawny email lub hasło</string>
+    <string name="error_email_exist">Niepoprawny email lub hasło</string>
     <string name="empty_data">To pole nie może być puste</string>
     <string name="logged">Zalogowano.</string>
     <string name="apply_changes">Zatwierdź zmiany</string>
