--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,10 @@
 <resources>
     <string name="app_name">Talker</string>
 
-    <string name="add_user">Dodaj</string>
+    <string name="invite_user">Zaproś</string>
+    <string name="accept_invitation">Akceptuj</string>
+    <string name="reject_invitation">Odczuć</string>
+    <string name="invitation">Zaproszenia do znajomych</string>
     <string name="incorrect_login">Niepoprawny email lub hasło</string>
     <string name="error_email_exist">Niepoprawny email lub hasło</string>
     <string name="empty_data">To pole nie może być puste</string>
