--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,8 @@
     <string name="app_name">Talker</string>
 
     <string name="invite_user">Zaproś</string>
-    <string name="talk">Rozmawiaj</string>
+    <string name="talk">Zaproś do rozmowy</string>
+    <string name="chat">Rozmawiaj</string>
     <string name="accept_invitation">Akceptuj</string>
     <string name="reject_invitation">Odczuć</string>
     <string name="invitation">Zaproszenia do znajomych</string>
